testing archive expanding

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,9 @@ anyhow = "1.0.52"
 indicatif = "0.16.2"
 futures-util = "0.3.14"
 dirs = "4.0.0"
+
+[target.'cfg(windows)'.dependencies]
+async_zip = "0.0.5"
+
+[target.'cfg(unix)'.dependencies]
+async-tar = "0.4.2"
