--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ indicatif = "0.16.2"
 futures-util = "0.3.14"
 dirs = "4.0.0"
 cfg-if = "1.0"
+tracing = "0.1"
+tracing-subscriber = "0.2"
 
 [target.'cfg(windows)'.dependencies]
 zip = "0.5"
