--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ tracing-subscriber = "0.2"
 
 [target.'cfg(windows)'.dependencies]
 zip = "0.5"
+winreg = "0.10.1"
 
 [target.'cfg(unix)'.dependencies]
 tar = "0.4"
