fix: include all default features for openssl version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ clap = { version = "3.1", features = ["derive"] }
 regex = "1.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-reqwest = { version = "0.11", default-features = false,features = ["stream"] }
+reqwest = { version = "0.11", default-features = false, features = ["stream"] }
 tokio = { version = "1.16.1", features = ["full"] }
 anyhow = "1.0.52"
 indicatif = "0.16.2"
@@ -30,7 +30,7 @@ tar = "0.4"
 flate2 = "1.0"
 
 [features]
-openssl = ["reqwest/hyper-tls"]
+default = ["reqwest/default"]
 rustls = ["reqwest/rustls-tls"]
 
 [profile.optimized]
