fix: github CI, using default also will use the default features + the rustls

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ tar = "0.4"
 flate2 = "1.0"
 
 [features]
-default = ["reqwest/default"]
+openssl = ["reqwest/default"]
 rustls = ["reqwest/rustls-tls"]
 
 [profile.optimized]
