--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ clap = { version = "4.0.15", features = ["derive"] }
 regex = "1.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-reqwest = { version = "0.11", default-features = false, features = ["stream"] }
+reqwest = { version = "0.11", default-features = false, features = ["stream", "rustls-tls"] }
 tokio = { version = "1.16.1", features = ["full"] }
 anyhow = "1.0.52"
 indicatif = "0.16.2"
@@ -28,10 +28,6 @@ winreg = "0.10.1"
 [target.'cfg(unix)'.dependencies]
 tar = "0.4"
 flate2 = "1.0"
-
-[features]
-openssl = ["reqwest/default"]
-rustls = ["reqwest/rustls-tls"]
 
 [profile.optimized]
 inherits = "release"
