fix: github actions, remove openssl

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --profile optimized --features openssl
+          args: --profile optimized
       - name: Upload Bob MacOS binary
         uses: actions/upload-artifact@v2
         with:
@@ -66,7 +66,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --profile optimized --features openssl
+          args: --profile optimized
       - name: Setup Bob build directory
         run: |
           mkdir build
