--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,11 @@ jobs:
         with:
           command: build
           args: --profile optimized
+      - name: Check lints
+        uses: actions-rs/cargo@v1
+        with:
+          command: clippy
+          args: --verbose -- -D warnings
       - name: Upload Bob Linux binary
         uses: actions/upload-artifact@v2
         with:
@@ -43,6 +48,11 @@ jobs:
         with:
           command: build
           args: --profile optimized
+      - name: Check lints
+        uses: actions-rs/cargo@v1
+        with:
+          command: clippy
+          args: --verbose -- -D warnings
       - name: Upload Bob MacOS binary
         uses: actions/upload-artifact@v2
         with:
@@ -67,6 +77,11 @@ jobs:
         with:
           command: build
           args: --profile optimized
+      - name: Check lints
+        uses: actions-rs/cargo@v1
+        with:
+          command: clippy
+          args: --verbose -- -D warnings
       - name: Setup Bob build directory
         run: |
           mkdir build
