--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,15 @@
 [package]
-name = "bob"
+name = "bob-nvim"
 version = "1.2.0"
 description = "A version manager for neovim"
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/MordechaiHadad/bob"
 edition = "2021"
+
+[[bin]]
+name = "bob"
+path = "src/main.rs"
 
 [dependencies]
 clap = { version = "4.0.15", features = ["derive"] }
