chore: Add some toml properties to upload to crates.io

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ license = "MIT"
 readme = "README.md"
 repository = "https://github.com/MordechaiHadad/bob"
 edition = "2021"
+exclude = ["resources/", "*.norg", "cliff.toml"] # Shame can't include target specific
+keywords = ["neovim", "version-manager"]
+categories = ["command-line"]
 
 [[bin]]
 name = "bob"
