ci(build): m1 fix

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,6 +69,7 @@ jobs:
           uses: actions-rs/toolchain@v1
           with:
             toolchain: stable
+            traget: aarch64-apple-darwin
             profile: minimal
             override: true
         - uses: Swatinem/rust-cache@v1
