--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,8 @@ cfg-if = "1.0"
 tracing = "0.1"
 tracing-subscriber = "0.2"
 yansi = "0.5.1"
+chrono = {version = "0.4.23", features = ["serde"]}
+rand = "0.8.5"
 
 [target.'cfg(windows)'.dependencies]
 zip = "0.5"
