--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ tracing-subscriber = "0.2"
 yansi = "0.5.1"
 chrono = {version = "0.4.23", features = ["serde"]}
 rand = "0.8.5"
+dialoguer = {version = "0.10.3", default-features = false}
 
 [target.'cfg(windows)'.dependencies]
 zip = "0.5"
