--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
           if-no-files-found: error
           retention-days: 7
   
-  linux-m1:
+  linux-arm:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -43,6 +43,8 @@ jobs:
           target: aarch64-unknown-linux-gnu
           profile: minimal
           override: true
+      - name: Install aarch64 compiler
+        run:  sudo apt-get install -y aarch64-linux-gnu-gcc
       - uses: Swatinem/rust-cache@v1
       - name: Build Bob
         uses: actions-rs/cargo@v1
