--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
           profile: minimal
           override: true
       - name: Install aarch64 compiler
-        run:  sudo apt-get install -y aarch64-linux-gnu-gcc
+        run:  sudo apt-get install -y gcc-aarch64-linux-gnu
       - uses: Swatinem/rust-cache@v1
       - name: Build Bob
         uses: actions-rs/cargo@v1
