--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,13 @@ jobs:
           override: true
       - name: Install aarch64 compiler
         run:  sudo apt-get install -y gcc-aarch64-linux-gnu
+      - name: Change linker
+        run: |
+          mkdir .cargo
+          cat > .cargo/config << EOF
+          [target.aarch64-unknown-linux-gnu]
+          linker = "aarch64-linux-gnu-gcc"
+          EOF
       - uses: Swatinem/rust-cache@v1
       - name: Build Bob
         uses: actions-rs/cargo@v1
