--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ rand = "0.8.5"
 serde_json = "1.0"
 yansi = "0.5.1"
 async-recursion = "1.0.2"
+clap_complete = "4.1"
 
 [dependencies.chrono]
 version = "0.4.23"
