--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
           profile: minimal
           override: true
       - name: Install aarch64 compiler
-        run:  sudo apt-get install -y gcc-aarch64-linux-gnu
+        run:  sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu
       - name: Change linker
         run: |
           mkdir .cargo
