--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,7 @@ jobs:
       matrix:
         os: [windows-latest, macos-latest, ubuntu-latest]
         tls: ['', '--no-default-features --features native-tls']
+        os_name: [windows, macos, linux]
     runs-on: ${{matrix.os}}
     steps:
       - uses: actions/checkout@v2
@@ -82,7 +83,7 @@ jobs:
       - name: Upload Bob Linux binary
         uses: actions/upload-artifact@v2
         with:
-          name: "bob-${{ matrix.os }}-x86_64${{ matrix.tls == '--no-default-features --features native-tls' && '-openssl' || '' }}"
+          name: "bob-${{ matrix.os_name }}-x86_64${{ matrix.tls == '--no-default-features --features native-tls' && '-openssl' || '' }}"
           path: target/optimized/bob
           if-no-files-found: error
           retention-days: 7
