--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,7 +96,7 @@ jobs:
           mkdir build
           copy .\\bin\\vcruntime140.dll .\\build
           copy .\\target\\optimized\\bob.exe .\\build
-        if: matrix.os == 'windows-latest'
+        if: matrix.os.OS == 'windows-latest'
       - name: Upload Bob Linux binary
         uses: actions/upload-artifact@v2
         with:
