--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ serde_json = "1.0"
 yansi = "0.5.1"
 async-recursion = "1.0.2"
 clap_complete = "4.1"
+toml = "0.8.8"
 
 [dependencies.chrono]
 version = "0.4.23"
